Fix lint error